--- a/tensorflow/Tensorflow_probability.ipynb
+++ b/tensorflow/Tensorflow_probability.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
