fixed bug wooohoooooo!!!

--- a/Pyro/MNIST_VAE.ipynb
+++ b/Pyro/MNIST_VAE.ipynb
@@ -201,7 +201,8 @@
     "            # decode the latent code z\n",
     "            loc_img = self.decoder.forward(z)\n",
     "            # score against actual images\n",
-    "            pyro.sample(\"obs\", dist.Bernoulli(loc_img).independent(1), obs=x.reshape(-1, 784))\n",
+    "            pyro.sample(\"obs\", dist.Bernoulli(loc_img).independent(1)\n",
+    "                        , obs=x.reshape(-1, 784))\n",
     "\n",
     "    # define the guide (i.e. variational distribution) q(z|x)\n",
     "    def guide(self, x):\n",
@@ -227,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vae = VAE()\n",
